--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-aiofiles==0.6.0
 click==7.1.2
-fastapi==0.63.0
 h11==0.12.0
 httptools==0.1.1
 pydantic==1.8.1
@@ -12,3 +10,11 @@ uvicorn==0.13.4
 uvloop==0.15.2
 watchgod==0.7
 websockets==8.1
+requests==2.22.0
+fastapi==0.65.1
+fer==20.1.1
+matplotlib==3.4.2
+passlib==1.7.1
+aiofiles==0.7.0 
+pipenv==2018.11.26
+pycparser==2.19
